--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,6 @@ svg {
 }
 
 ::-webkit-scrollbar {
-  width: 0px;
-  height: 0px;
+  width: 0;
+  height: 0;
 }
